--- a/ciso-next/package.json
+++ b/ciso-next/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.10",
+    "@mui/styled-engine-sc": "^5.14.10",
+    "@mui/x-data-grid": "^6.15.0",
     "@nextui-org/react": "^2.1.13",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
@@ -21,6 +26,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.11",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
