--- a/ciso-next/package.json
+++ b/ciso-next/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.2",
     "@mui/material": "^5.14.10",
     "@mui/styled-engine-sc": "^5.14.10",
     "@mui/x-data-grid": "^6.15.0",
@@ -19,12 +21,15 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "bootstrap": "^5.3.2",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "heroicons": "^2.0.18",
     "next": "13.5.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.11",
     "tailwindcss": "3.3.3",
