--- a/ciso-next/package.json
+++ b/ciso-next/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "heroicons": "^2.0.18",
+    "mssql": "^10.0.1",
     "next": "13.5.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
