--- a/ciso-next/package.json
+++ b/ciso-next/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
+    "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.10",
     "@mui/styled-engine-sc": "^5.14.10",
     "@mui/x-data-grid": "^6.15.0",
@@ -26,7 +27,7 @@
     "eslint-config-next": "13.5.2",
     "heroicons": "^2.0.18",
     "mssql": "^10.0.1",
-    "next": "13.5.2",
+    "next": "^13.5.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
