--- a/ciso-next/package.json
+++ b/ciso-next/package.json
@@ -12,12 +12,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.2",
     "@material-tailwind/react": "^2.1.2",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.10",
     "@mui/styled-engine-sc": "^5.14.10",
     "@mui/x-data-grid": "^6.15.0",
     "@nextui-org/react": "^2.1.13",
+    "@supabase/supabase-js": "^2.38.1",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -33,9 +35,11 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "styled-components": "^5.3.11",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zod": "^3.22.4"
   }
 }
