--- a/ciso-next/package.json
+++ b/ciso-next/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.3.2",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "framer-motion": "^10.16.4",
     "heroicons": "^2.0.18",
     "mssql": "^10.0.1",
     "next": "^13.5.4",
@@ -37,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-type-animation": "^3.2.0",
     "styled-components": "^5.3.11",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
